--- a/package.json
+++ b/package.json
@@ -50,5 +50,8 @@
   "license": "UNLICENSED",
   "dependencies": {
     "axios": "^1.5.0"
+  },
+  "devDependencies": {
+    "jest": "^29.6.4"
   }
 }
