--- a/package.json
+++ b/package.json
@@ -49,9 +49,7 @@
   "author": "Thinkful, Inc.",
   "license": "UNLICENSED",
   "dependencies": {
-    "axios": "^1.5.0"
-  },
-  "devDependencies": {
-    "jest": "^29.6.4"
+    "axios": "^1.5.0",
+    "puppeteer": "^21.1.1"
   }
 }
